# dev-scout

./: .editorconfig  .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.cursor/rules/: dev-scout-loop.mdc
.github/workflows/: ci.yml
config/: delivery.yaml  jam-criteria.yaml  judge.yaml  sources.yaml  tracks.yaml
config/governance/: data-boundaries.yaml
config/lenses/: build-robust.yaml  model-workflows.yaml  production-patterns.yaml  ship-faster.yaml  tooling-setups.yaml
data/: findings.json
docs/: AGENT-LOOP.md  CHAT-LOOP.md  COLLECTION.md  DAILY-RUN.md  DELIVERY.md  DISCOVERY-PLAYBOOK.md  JUDGE.md  LENSES.md  RESEARCH.md  SUBSCRIPTIONS.md  WEEKLY-RUN.md
runs/2026-07-09/: GOAL.md  RUN.md
runs/2026-07-09/00-intake/: intake.json
runs/2026-07-09/01-research/: collect-summary.json  corroboration.json  coverage.json  excerpts.jsonl
runs/2026-07-09/03-rank/: ranked.json
runs/2026-07-10/: GOAL.md  RUN.md
runs/2026-07-11/: GOAL.md  RUN.md  run.manifest.json
runs/2026-07-12/: GOAL.md  RUN.md  run.manifest.json
runs/2026-07-13/: GOAL.md  RUN.md  run.manifest.json
runs/2026-07-21/: GOAL.md  RUN.md  run.manifest.json
runs/2026-07-22/: GOAL.md  RUN.md
runs/2026-W28/: GOAL.md  RUN.md  run.manifest.json
runs/2099-W01/: GOAL.md  RUN.md  run.manifest.json
src/dev_scout/: cli.py  context.py  util.py
system/memory/: discovery-playbook.yaml  evidence-rubric.yaml  source-ontology.yaml
templates/: GOAL.md  RUN.md  feedback.md  jam-item.example.json
tests/: test_day.py  test_week.py
tests/fixtures/: discover_urls.json  excerpts.jsonl
(+192 files in other folders)
