[project]
name = "dev-scout"
version = "0.1.0"
description = "Weekly research harness for faster, more robust AI-assisted development"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  "typer>=0.15.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "httpx>=0.28.0",
  "pyyaml>=6.0.2",
  "rich>=13.9.0",
  "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "ruff>=0.8.0"]
extract = ["trafilatura>=2.0.0"]

[project.scripts]
dev-scout = "dev_scout.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dev_scout"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
